fix(): comment form is not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4004,10 +4004,6 @@ li.recent-post-item article:is(.dark *) {
   padding-right: 3rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -4925,6 +4921,7 @@ li.recent-post-item article:is(.dark *) {
 
 .comments-content.visible {
   opacity: 1;
+  display: block;
 }
 
 .comments-content .comment-item,
@@ -5215,11 +5212,6 @@ body {
 .hover\:bg-primary-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-secondary-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 212 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-transparent:hover {
@@ -5753,11 +5745,6 @@ body {
   background-color: rgb(49 46 129 / 0.3);
 }
 
-.dark\:hover\:bg-secondary-800:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(104 23 191 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:hover\:text-accent-400:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(45 212 191 / var(--tw-text-opacity, 1));
@@ -5786,16 +5773,6 @@ body {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.dark\:hover\:text-primary-800:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(55 48 163 / var(--tw-text-opacity, 1));
-}
-
-.dark\:hover\:text-primary-200:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(199 210 254 / var(--tw-text-opacity, 1));
 }
 
 .group:hover .dark\:group-hover\:text-neutral-200:is(.dark *) {
